<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|always" />
        <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite_user"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            app:showAsAction="ifRoom" />
</menu>
